--- a/src/main/resources/templates/facility/list.html
+++ b/src/main/resources/templates/facility/list.html
@@ -21,7 +21,7 @@
         <li class="breadcrumb-item active" th:text="${facilityModel.subtitle}">信息查询</li>
     </ol>
     <div class="card mb-3">
-        <div class="col-md-12 text-xl-center column">
+        <div class="col-md-6 offset-5 column">
             <a th:href="@{~/facility/add}" th:text="新增设备">新增设备</a>
         </div>
         <div class="table-responsive">
