--- a/src/main/resources/templates/module/index.html
+++ b/src/main/resources/templates/module/index.html
@@ -15,7 +15,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <div th:include="mainframe :: common"></div>
 <div class="content-wrapper">
-    <iframe src="/locate/add" style="width: 100%; height: 550px;" frameborder="0" id="contentFrame" ></iframe>
+    <iframe src="/locate/add" style="width: 100%; height: 550px;" frameborder="0" id="contentFrame" target="_parent"></iframe>
 </div>
 <footer class="sticky-footer">
     <div class="container">
