--- a/src/main/resources/templates/record/search.html
+++ b/src/main/resources/templates/record/search.html
@@ -189,7 +189,7 @@
                 </form>
             </div>
             <div class="col-md-10 column text-xl-center">
-                <button type="button" onclick="search()" class="btn btn-default btn-warning form-group">查询</button>
+                <button type="button" onclick="search()" class="btn btn-default btn-warning form-group offset-6">查询</button>
             </div>
         </div>
     </div>
