--- a/src/main/resources/templates/facility/add.html
+++ b/src/main/resources/templates/facility/add.html
@@ -11,7 +11,6 @@
 
 <body>
 <div class="container-fluid">
-    <!-- Breadcrumbs-->
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="#" th:text="${facilityModel.title}">流水管理</a>
@@ -19,91 +18,73 @@
         <li class="breadcrumb-item active" th:text="${facilityModel.subtitle}">信息查询</li>
     </ol>
     <div class="card-body">
-        <div class="table-responsive">
+        <div class="col-md-6 offset-md-3">
             <form action="/users" th:action="@{~/facility/save}" method="POST" role="form">
                 <div class="form-group">
-                    <label for="name">
-                        名字：
+                    <label for="name" class="form-inline">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;字：
+                        <input type="text" id="name" name="name" class="form-control col-md-8">
                     </label>
-                    <input type="text" id="name" name="name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="locate">
-                        地点：
+                    <label for="locate" class="form-inline">地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;点：
+                        <select id="locate" name="locate" class="form-control col-md-8">
+                            <option th:each="address:${facilityModel.thirdLocateList}"
+                                    th:value="${address.id}"
+                                    th:text="${address.address}"
+                            </option>
+                        </select>
                     </label>
-                    <select id="locate" name="locate" class="form-group">
-                        <option th:each="address:${facilityModel.thirdLocateList}"
-                                th:value="${address.id}"
-                                th:text="${address.address}"
-                        </option>
-                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="startTime" class="form-inline">开始时间(default)：
+                        <input readonly="readonly" type="time" id="startTime" name="startTime" class="form-control col-md-8">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="endTime" class="form-inline">关闭时间(default)：
+                        <input readonly="readonly" type="time" id="endTime" name="endTime" class="form-control col-md-8">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="permission" class="form-inline">权&nbsp;&nbsp;&nbsp;&nbsp;限(1-10)：
+                        <input type="text" id="permission" name="permission" class="form-control col-md-8">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="type" class="form-inline">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型：
+                        <select id="type" name="type" class="form-control col-md-8">
+                            <option th:text="单进" th:value="1">单进</option>
+                            <option th:text="单出" th:value="2">单出</option>
+                            <option th:text="双向" th:value="3">双向</option>
+                        </select>
+                    </label>
 
                 </div>
                 <div class="form-group">
-                    <label for="startTime">
-                        开始时间(00：00：01)
+                    <label for="status" class="form-inline">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态：
+                        <select id="status" name="status" class="form-control col-md-8">
+                            <option th:text="关闭" th:value="1">关闭</option>
+                            <option th:text="开放" th:value="2">开放</option>
+                        </select>
                     </label>
-                    <input readonly="readonly" type="time" id="startTime" name="startTime" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="endTime">
-                        关闭时间（23：59：59）
+                    <label for="ipAddr" class="form-inline">本&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机&nbsp;&nbsp;IP：
+                        <input type="text" id="ipAddr" name="ipAddr" class="form-control col-md-8">
                     </label>
-                    <input readonly="readonly" type="time" id="endTime" name="endTime" class="form-control">
-
                 </div>
                 <div class="form-group">
-                    <label for="permission">
-                        权限(1-10)：
+                    <label for="serverIp" class="form-inline">服务器&nbsp;&nbsp;&nbsp;&nbsp;IP：
+                        <input type="text" id="serverIp" name="serverIp" class="form-control col-md-8">
                     </label>
-                    <input type="text" id="permission" name="permission" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="type">
-                        类型：
-                    </label>
-                    <select id="type" name="type" class="form-group">
-                        <option th:text="单进" th:value="1">单进</option>
-                        <option th:text="单出" th:value="2">单出</option>
-                        <option th:text="双向" th:value="3">双向</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="status">
-                        状态：
-                    </label>
-                    <select id="status" name="status" class="form-group">
-                        <option th:text="关闭" th:value="1">关闭</option>
-                        <option th:text="开放" th:value="2">开放</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="ipAddr">
-                        本机IP：
-                    </label>
-                    <input type="text" id="ipAddr" name="ipAddr" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="serverIp">
-                        服务器IP：
-                    </label>
-                    <input type="text" id="serverIp" name="serverIp" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="提交" class="btn btn-primary">
-
+                    <input type="submit" value="提交" class="btn btn-primary offset-md-3">
                 </div>
             </form>
         </div>
     </div>
 </div>
-<footer class="sticky-footer">
-    <div class="container">
-        <div class="text-center">
-        </div>
-    </div>
-</footer>
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
