--- a/src/main/resources/templates/record/facility.html
+++ b/src/main/resources/templates/record/facility.html
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="col-md-10 column text-xl-center">
-                        <button type="button" onclick="search()" class="btn btn-default btn-warning form-group">查询
+                        <button type="button" onclick="search()" class="btn btn-default btn-warning form-group offset-5">查询
                         </button>
                     </div>
                 </form>
