--- a/src/main/resources/templates/module/login.html
+++ b/src/main/resources/templates/module/login.html
@@ -25,16 +25,17 @@
         <form th:action="@{~/login}" method="post">
           <div class="form-group">
             <label for="exampleInputEmail1">账号</label>
-            <input class="form-control" id="exampleInputEmail1" type="text" placeholder="card id">
+            <input class="form-control" id="exampleInputEmail1" name="cardid" type="text" placeholder="card id">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">密码</label>
-            <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+            <input class="form-control" id="exampleInputPassword1" name="password" type="password" placeholder="Password">
           </div>
           <div class="form-group">
             <div class="form-check">
               <label class="form-check-label">
                 <input class="form-check-input" type="checkbox"> 记住密码</label>
+                <label class="form-group" style="color: red" th:text="${mainModel.msg}"> 记住密码</label>
             </div>
           </div>
           <button class="btn btn-primary btn-block" type="submit">登陆</button>
