--- a/src/main/resources/templates/module/login.html
+++ b/src/main/resources/templates/module/login.html
@@ -33,9 +33,7 @@
           </div>
           <div class="form-group">
             <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox"> 记住密码</label>
-                <label class="form-group" style="color: red" th:text="${mainModel.msg}"> 记住密码</label>
+                <label class="form-group" style="color: red" th:text="${mainModel.msg}"></label>
             </div>
           </div>
           <button class="btn btn-primary btn-block" type="submit">登陆</button>
