finished except logout

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -8,6 +8,13 @@
     <div th:include="common_css :: common_css"></div>
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<script type="text/javascript">
+    function logout() {
+        alert("aaa");
+        window.location.href = "/module/login";
+    }
+</script>
+
 <div th:fragment="common">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
         <a class="navbar-brand" href="index.html">门禁管理系统</a>
@@ -125,12 +132,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                        <i class="fa fa-fw fa-user"></i>用户</a>
+                    <a class="nav-link" data-toggle="modal"  th:text="${username}" >
+                        <i class="fa fa-fw fa-user" ></i>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                        <i class="fa fa-fw fa-sign-out"></i>注销</a>
+                    <a class="nav-link" data-toggle="modal" on="logout()">
+                        <i class="fa fa-fw fa-sign-out" ></i>注销</a>
                 </li>
             </ul>
         </div>
