--- a/src/main/resources/templates/module/index.html
+++ b/src/main/resources/templates/module/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
-<div th:include="mainframe :: common"></div>
+<div th:include="mainframe :: common" th:with="param=*{username}"></div>
 <div class="content-wrapper">
     <iframe src="/locate/add" style="width: 100%; height: 550px;" frameborder="0" id="contentFrame" target="_parent"></iframe>
 </div>
