--- a/src/main/resources/templates/module/login.html
+++ b/src/main/resources/templates/module/login.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
+  <title th:text="${mainModel.title}">SB Admin - Start Bootstrap Template</title>
   <!-- Bootstrap core CSS-->
   <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -20,7 +20,7 @@
 <body class="bg-dark">
   <div class="container">
     <div class="card card-login mx-auto mt-5">
-      <div class="card-header">登陆</div>
+      <div class="card-header" >登陆</div>
       <div class="card-body">
         <form th:action="@{~/login}" method="post">
           <div class="form-group">
