--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -37,6 +37,11 @@
                             <input type="text" id="name" name="name" th:value="*{name}" class="form-control col-md-8">
                         </label>
                     </div>
+                    <div>
+                        <label for="password" class="form-inline">密 码：
+                            <input type="password" id="password" name="password" th:value="*{password}" class="form-control col-md-8">
+                        </label>
+                    </div>
 
                     <label class="form-inline" for="sex">性 别：
                         <select id="sex" name="sex" class="form-control col-md-8">
