--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -137,7 +137,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" on="logout()">
+                    <a class="nav-link"  href="/logout">
                         <i class="fa fa-fw fa-sign-out" ></i>注销</a>
                 </li>
             </ul>
