--- a/src/main/resources/templates/users/add.html
+++ b/src/main/resources/templates/users/add.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+<script type="text/javascript">
+    function check() {
+        var cardid = $("#cardid").val();
+        var name = $("#name").val();
+        var password = $("#password").val();
+        var permission = $("#permission").val();
+
+        if (cardid == "" || name == "" || password == "" || permission == "") {
+            alert("请检查参数！");
+            return false;
+        }
+    }
+</script>
 
 <div class="container-fluid">
     <ol class="breadcrumb">
@@ -76,19 +89,12 @@
                     </select>
                 </label>
                 <div class="col-md-6 offset-md-2">
-                    <input type="submit" value="提交" class="btn btn-primary form-control">
+                    <input type="submit" value="提交" onclick="return check()" class="btn btn-primary form-control">
                 </div>
             </form>
         </div>
     </div>
 </div>
-<!--<footer class="sticky-footer">-->
-<!--<div class="container">-->
-<!--<div class="text-center">-->
-<!--</div>-->
-<!--</div>-->
-<!--</footer>-->
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
