--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -10,7 +10,7 @@
 </head>
 
 <body >
-    <div class="container">
+    <div class="container-fluid">
         <!-- Breadcrumbs-->
         <div class="row">
             <div class="col-md-12">
