--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Title</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
 </head>
-<body background="http://photo.xjtu.edu.cn/photo/upload/slider/1341888000.jpg"  >
+<body   >
+<!--background="http://photo.xjtu.edu.cn/photo/upload/slider/1341888000.jpg"-->
 </body>
 </html>
