--- a/src/main/resources/templates/module/index.html
+++ b/src/main/resources/templates/module/index.html
@@ -15,7 +15,8 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <div th:include="mainframe :: common" th:with="param=*{username}"></div>
 <div class="content-wrapper">
-    <iframe src="index.html" style="width: 100%; height: 550px;" frameborder="0" id="contentFrame" target="_parent"></iframe>
+    <iframe src="../images/bg.jpg"
+            style="width: 100%; height: 550px;" frameborder="0" id="contentFrame"></iframe>
 </div>
 <footer class="sticky-footer">
     <div class="container">
@@ -28,10 +29,15 @@
 <div th:include="common_js :: common_js"></div>
 </div>
 <script>
-    function navgateTo(evt) {
-        evt.preventDefault();
-        var contentFrame = document.getElementById("contentFrame");
-        contentFrame.src = evt.srcElement.href;
+    function navgateTo(evt,url) {
+        if (evt && evt.preventDefault) {
+            evt.preventDefault();
+            var contentFrame = document.getElementById("contentFrame");
+            contentFrame.src = url;
+        } else {
+            window.event.returnValue = false;
+        }
+        return false;
     }
 </script>
 </body>
