--- a/src/main/resources/templates/common_js.html
+++ b/src/main/resources/templates/common_js.html
@@ -4,15 +4,22 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">>
 <div th:fragment="common_js" >
     <!-- Bootstrap core JavaScript-->
-    <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="./module/vendor/jquery/jquery.min.js"></script>
-    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}" src="./module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{~/module/vendor/jquery-easing/jquery.easing.min.js}" src="./module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="./module/vendor/chart.js/Chart.min.js"></script>
-    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}" src="./module/vendor/datatables/jquery.dataTables.js"></script>
-    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}" src="./module/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <!--<script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="./module/vendor/jquery/jquery.min.js"></script>-->
+    <!--<script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}" src="./module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+    <!--<script th:src="@{~/module/vendor/jquery-easing/jquery.easing.min.js}" src="./module/vendor/jquery-easing/jquery.easing.min.js"></script>-->
+    <!--<script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="./module/vendor/chart.js/Chart.min.js"></script>-->
+    <!--<script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}" src="./module/vendor/datatables/jquery.dataTables.js"></script>-->
+    <!--<script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}" src="./module/vendor/datatables/dataTables.bootstrap4.js"></script>-->
     <script th:src="@{~/module/js/sb-admin.min.js}" src="./module/js/sb-admin.min.js"></script>
     <script th:src="@{~/module/js/sb-admin-datatables.min.js}" src="./module/js/sb-admin-datatables.min.js"></script>
     <script th:src="@{~/module/js/sb-admin-charts.min.js}" src="./module/js/sb-admin-charts.min.js"></script>
 
+
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdn.bootcss.com/Chart.js/2.8.0-rc.1/Chart.min.js"></script>
+    <script src="https://cdn.bootcss.com/datatables/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.bootcss.com/datatables/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 </div>
 </html>
