--- a/src/main/resources/templates/common_css.html
+++ b/src/main/resources/templates/common_css.html
@@ -4,9 +4,14 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">>
 <div th:fragment="common_css" >
     <link  href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <!--<link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+    <!--<link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">-->
     <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
+
+    <link href="https://cdn.bootcss.com/startbootstrap-sb-admin-2/3.3.7+1/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 </div>
 </html>
